@@ -2,6 +2,7 @@
 24.05.2012
 - bugfix Smarty_Internal_Write_File::writeFile() could cause race-conditions on linux systems (Issue 101)
 - bugfix attribute parameter names of plugins may now contain also "-"  and ":"  (Forum Topic 21856)
+- bugfix add compile_id to cache key of of source (Issue 97)
 
 22.05.2012
 - bugfix recursive {include} within {section} did fail (Smarty developer group)
